--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,4 @@
 org.gradle.jvmargs=-Xmx2g
 android.useAndroidX=true
 android.enableJetifier=true
-org.gradle.java.home=D:\\jdk-17.0.12
+//org.gradle.java.home=D:\\jdk-17.0.12
