--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,7 +72,7 @@ dependencies:
   cached_network_image: ^3.4.1
   flutter_secure_storage: ^9.2.4
   flutter_rating: ^2.0.2
-  flutter_stripe: ^11.4.0
+  flutter_stripe: 11.4.0
   get_storage: ^2.1.1
   
 
