--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,10 +31,10 @@ jobs:
           sdk: 3.5.4          
 
      # If you have an additional Dart config file
-      - name: Create payment_secret.dart
-        shell: pwsh
-        run: |
-            [IO.File]::WriteAllBytes("lib/core/services/payment/secret.dart", [Convert]::FromBase64String("${{ secrets.PAYMENT_SECRET_DART }}"))
+     # - name: Create payment_secret.dart
+      #  shell: pwsh
+       # run: |
+       #     [IO.File]::WriteAllBytes("lib/core/services/payment/secret.dart", [Convert]::FromBase64String("${{ secrets.PAYMENT_SECRET_DART }}"))
 
 
         
